Roundcube Webmail Placeholder
=============================

 * Created plugin