@@ -1,14 +1,14 @@
-Roundcube Webmail Placeholder
-=============================
+Roundcube Webmail TaskWatermark
+===============================
 This plugin replaces the static watermark template used by the core with a task
 aware page with tips for the user on what to do (eg. Select a message to read).
 
 ATTENTION
 ---------
 This is just a snapshot from the GIT repository and is **NOT A STABLE version
-of Placeholder**. It is Intended for use with the **GIT-master** version of
+of TaskWatermark**. It is Intended for use with the **GIT-master** version of
 Roundcube and it may not be compatible with older versions. Stable versions of
-Placeholder are available from the [Roundcube plugin repository][rcplugrepo]
+TaskWatermark are available from the [Roundcube plugin repository][rcplugrepo]
 (for 1.4 and above) or the [releases section][releases] of the GitHub
 repository.
 
@@ -24,7 +24,7 @@ folder for details on the skin license.
 Install
 -------
 * Place this plugin folder into plugins directory of Roundcube
-* Add placeholder to $config['plugins'] in your Roundcube config
+* Add taskwatermark to $config['plugins'] in your Roundcube config
 
 **NB:** When downloading the plugin from GitHub you will need to create a
 directory called skin and place the files in there, ignoring the root
@@ -40,7 +40,7 @@ $config['display_first'] = true;
 
 Interaction with other plugins
 ------------------------------
-The placeholder_show hook is triggered when listing the available actions on
+The taskwatermark_show hook is triggered when listing the available actions on
 the list options menu.
 *Arguments:*
  * action
@@ -50,6 +50,6 @@ the list options menu.
  * hint
  * output
 
-[rcplugrepo]: https://plugins.roundcube.net/packages/johndoh/placeholder
-[releases]: https://github.com/johndoh/roundcube-placeholder/releases
+[rcplugrepo]: https://plugins.roundcube.net/packages/johndoh/taskwatermark
+[releases]: https://github.com/johndoh/roundcube-taskwatermark/releases
 [gpl]: https://www.gnu.org/licenses/gpl.html
