@@ -1,8 +1,8 @@
 {
-  "name": "johndoh/placeholder",
+  "name": "johndoh/taskwatermark",
   "description": "Replaces the static watermark template used by Roundcube with a task aware page with tips for the user on what to do.",
   "keywords": ["placeholder","watermark"],
-  "homepage": "https://github.com/johndoh/roundcube-placeholder/",
+  "homepage": "https://github.com/johndoh/roundcube-taskwatermark/",
   "license": "GPL-3.0",
   "type": "roundcube-plugin",
   "version": "0.1-git",
