@@ -1,5 +1,5 @@
 /**
- * SmartWatermark plugin styles
+ * TaskWatermark plugin styles
  */
 
 @import (reference) "../../../../skins/elastic/styles/variables";
