@@ -1,4 +1,5 @@
-Roundcube Webmail Placeholder
-=============================
+Roundcube Webmail TaskWatermark
+===============================
 
+ * Rename plugin to TaskWatermark
  * Created plugin
